# umpf

./: .gitignore  Makefile.am  configure.ac  example-pfd.lua  libpfd.pc.in  libumpf.pc.in
cli/: Makefile.am  __gengetopt-no-failure.sed  epoll-helpers.h  umpf.c  umpp-clo.ggo  umpp-meld-clo.ggo  umpp.c
lib/: Makefile.am  example-msg-01.xml  example-msg-02.xml  example-msg-03.xml  example-msg-apply.xml  example-msg-get_sec.xml  example-msg-new_portfolio.xml  example-msg-new_sec.xml  example-msg-set_portfolio.xml  example-msg-set_sec.xml  nifty.h  pfd.h  print-fixml.c  proto-fixml-attr.gperf  proto-fixml-ns.gperf  proto-fixml-tag.gperf  proto-fixml-tag.h  proto-fixml.c  proto-fixml.h  testlib.c  testprint.c  ud-sockaddr.h  umpf-msg-glue-fixml.c  umpf-private.h  umpf.c  umpf.h
m4/: sxe-compiler.m4  sxe-dbms.m4  sxe-events.m4
sql/: Makefile.am  install-mysql.sql  install-sqlite3.sql  install.sql  install.sql.in  mysql.m4  sqlite3.m4  uninstall-mysql.sql  uninstall-sqlite3.sql  uninstall.sql  uninstall.sql.in
srv/: Makefile.am  be-sql.c  be-sql.h  con6ity.c  con6ity.h  dso-pfd.c  dso-umpf.c  example-umpf.lua  logger.h  nifty.h  umpfd-clo.ggo  umpfd.c
